--- a/DeepBluesSimulation/DeepBluesSimulation.vcxproj.filters
+++ b/DeepBluesSimulation/DeepBluesSimulation.vcxproj.filters
@@ -81,6 +81,15 @@
     <ClInclude Include="Pawn.h">
       <Filter>Header Files\Entities</Filter>
     </ClInclude>
+    <ClInclude Include="PointMath.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyHealth.h">
+      <Filter>Header Files\Constants</Filter>
+    </ClInclude>
+    <ClInclude Include="ChessPiece.h">
+      <Filter>Header Files\Entities</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cadence.cpp">
@@ -99,6 +108,9 @@
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
     <ClCompile Include="Pawn.cpp">
+      <Filter>Source Files\Entities</Filter>
+    </ClCompile>
+    <ClCompile Include="ChessPiece.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
   </ItemGroup>
