--- a/DeepBluesSimulation/DeepBluesSimulation.vcxproj
+++ b/DeepBluesSimulation/DeepBluesSimulation.vcxproj
@@ -18,11 +18,13 @@
     <ClInclude Include="Direction.h" />
     <ClInclude Include="DeepBluesDamage.h" />
     <ClInclude Include="DeepBluesHealth.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="EntityEntry.h" />
     <ClInclude Include="FileLogger.h" />
     <ClInclude Include="IEntity.h" />
     <ClInclude Include="ILevel.h" />
     <ClInclude Include="ILogger.h" />
+    <ClInclude Include="LevelBasedEntity.h" />
     <ClInclude Include="Pawn.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="IWeapon.h" />
@@ -32,9 +34,11 @@
   <ItemGroup>
     <ClCompile Include="Cadence.cpp" />
     <ClCompile Include="DeepBluesLevel.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EntityEntry.cpp" />
     <ClCompile Include="FileLogger.cpp" />
     <ClCompile Include="IEntity.cpp" />
+    <ClCompile Include="LevelBasedEntity.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Pawn.cpp" />
   </ItemGroup>
